/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id "com.gradleup.shadow" version "9.4.1"
}

repositories {
    mavenLocal()

    maven {
        url = uri('https://oss.sonatype.org/content/groups/public/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }

    maven {
        name = "papermc-repo"
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
}

dependencies {
    api libs.org.json.json
    api libs.com.squareup.okhttp3.okhttp
    api libs.com.google.code.gson.gson

    compileOnly "io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT"
    compileOnly libs.net.luckperms.api

    implementation files("libs/YBMJ-0.1.5.jar")
}

group = 'com.samvolvo'
version = '2.1.2b'
description = 'PrefixProB'
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

shadowJar {
    archiveClassifier.set('')

    relocate 'me.deadybbb', "${project.group}"

    exclude 'paper-plugin.yml'

    minimize()
}

tasks {
    build.dependsOn(shadowJar)
}

def targetJavaVersion = 21
java {
    toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(targetJavaVersion)
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}